test(shield-home): make legacy-lid contract Android-compatible